added to do to issue 1

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,4 +7,6 @@
 
 Known Issues:
 1. Details of unsent configurations will not save
+    --Detail.html is incomplete yet, have to format to call table or list to
+    autofill form, urls.py is incomplete line 13.
 2. Button with delFunc() in detail.html unable to call function, perhaps because configuration is empty
